--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -4,102 +4,113 @@
 
 <div class="home">
     <section class="home--hero">
-        <div class="hero--image">
-            <img src="images/Pattern_1.png" />
-        </div>
-        <div class="header">
-            <h1>From one codebase springs many platforms.</h1>
-            <p class="subtitle-2">
-                Sparc offers a way to architect apps so that you can focus on painting the unique and beautiful art your app is meant to convey.
-            </p>
+        <div class="container">
+            <div class="hero--image">
+                <img src="images/Pattern_1.png" />
+            </div>
+            <div class="header">
+                <h1>From one codebase springs many platforms.</h1>
+                <p class="subtitle-2">
+                    Sparc offers a way to architect apps so that you can focus on painting the unique and beautiful art your app is meant to convey.
+                </p>
+            </div>
         </div>
     </section>
     <div class="float-wrapper" id="float-wrapper">
+        <div class="float-spacer"></div>
         <section class="home--intro">
-            <div class="header">
-                <h3>Blossom breaks many paradigms</h3>
-                <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
-            </div>
-            <div class="interactive-block">
-                <img src="images/Blocks.png" />
-            </div>
-            <div class="projectlogo-carousel">
-                <img src="/images/projects/Citeblue_Hori.png"/>
-                <img src="/images/projects/Law of 100.png"/>
-                <img src="/images/projects/Kuvio.png" />
-                <img src="/images/projects/Sparc_Hori.png" />
-                <img src="/images/projects/Kodekit_Hori.png" />
-                <img src="/images/projects/Ibis_Hori.png" />
-                <img src="/images/projects/Conseris_Hori.png" />
+            <div class="container">
+                <div class="header">
+                    <h3>Blossom breaks many paradigms</h3>
+                    <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+                </div>
+                <div class="interactive-block">
+                    <img src="images/Blocks.png" />
+                </div>
+                <div class="projectlogo-carousel">
+                    <img src="/images/projects/Citeblue_Hori.png"/>
+                    <img src="/images/projects/Law of 100.png"/>
+                    <img src="/images/projects/Kuvio.png" />
+                    <img src="/images/projects/Sparc_Hori.png" />
+                    <img src="/images/projects/Kodekit_Hori.png" />
+                    <img src="/images/projects/Ibis_Hori.png" />
+                    <img src="/images/projects/Conseris_Hori.png" />
+                </div>
             </div>
         </section>
         <section class="home--about">
-            <div class="petals">
-                <img src="/images/Pattern_2.png" />
-            </div>
-            <div class="about--wrapper">
-                <div>
-                    <h4>Who we are</h4>
-                    <p class="subtitle-1">
-                        Erat pellentesque adipiscing commodo elit. Facilisi nullam vehicula ipsum a. Sed nisi lacus sed viverra tellus in. 
-                        Eget gravida cum sociis natoque penatibus. Imperdiet massa tincidunt nunc pulvinar sapien et ligula
-                    </p>
+            <div class="container">
+                <div class="petals">
+                    <img src="/images/Pattern_2.png" />
                 </div>
-                <div>
-                    <h4>What is Blossom</h4>
-                    <p class="subtitle-1">
-                        Non enim praesent elementum facilisis leo vel fringilla est ullamcorper.
-                        Erat pellentesque adipiscing commodo elit. Facilisi nullam vehicula ipsum a.
-                    </p>
-                </div>
-                <div>
-                    <h4>How it works</h4>
-                    <p class="subtitle-1">
-                        Phasellus egestas tellus rutrum tellus pellentesque. Imperdiet massa tincidunt nunc pulvinar.
-                    </p>
-                    <p class="subtitle-1">
-                        Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Feugiat sed lectus vestibulum mattis ullamcorper....
-                    </p>
-                </div>
-                <div>
-                    <h4>Our goal</h4>
-                    <p class="subtitle-1">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    </p>
-                </div>
-                <div>
-                    <button class="learn-more">Learn More</button>
+                <div class="about--wrapper">
+                    <div>
+                        <h4>Who we are</h4>
+                        <p class="subtitle-1">
+                            Erat pellentesque adipiscing commodo elit. Facilisi nullam vehicula ipsum a. Sed nisi lacus sed viverra tellus in. 
+                            Eget gravida cum sociis natoque penatibus. Imperdiet massa tincidunt nunc pulvinar sapien et ligula
+                        </p>
+                    </div>
+                    <div>
+                        <h4>What is Blossom</h4>
+                        <p class="subtitle-1">
+                            Non enim praesent elementum facilisis leo vel fringilla est ullamcorper.
+                            Erat pellentesque adipiscing commodo elit. Facilisi nullam vehicula ipsum a.
+                        </p>
+                    </div>
+                    <div>
+                        <h4>How it works</h4>
+                        <p class="subtitle-1">
+                            Phasellus egestas tellus rutrum tellus pellentesque. Imperdiet massa tincidunt nunc pulvinar.
+                        </p>
+                        <p class="subtitle-1">
+                            Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Feugiat sed lectus vestibulum mattis ullamcorper....
+                        </p>
+                    </div>
+                    <div>
+                        <h4>Our goal</h4>
+                        <p class="subtitle-1">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        </p>
+                    </div>
+                    <div>
+                        <button class="learn-more">Learn More</button>
+                    </div>
                 </div>
             </div>
         </section>
         <section class="home--projects">
-            <div class="header">
-                <h3>Explore our work</h3>
-                <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
-            </div>
-            <div class="project-carousel">
-                <div class="project-wrapper">
-                    <GithubCard Name="Citeblue" ProjectUrl="https://www.citeblue.com/" GithubUrl="https://github.com/sparc-coop/citeblue"/>
-                    <GithubCard Name="Sparc" ProjectUrl="https://www.sparc.coop/" GithubUrl="https://github.com/sparc-coop/sparc" />
-                    <GithubCard Name="Conseris" ProjectUrl="https://conseris.io/" GithubUrl="https://github.com/sparc-coop/conseris"/>
-                    <GithubCard Name="Citeblue" ProjectUrl="https://www.citeblue.com/" GithubUrl="https://github.com/sparc-coop/conseris" />
-                    <GithubCard Name="Sparc" ProjectUrl="https://www.sparc.coop/" GithubUrl="https://github.com/sparc-coop/sparc" />
-                    <GithubCard Name="Conseris" ProjectUrl="https://conseris.io/" GithubUrl="https://github.com/sparc-coop/conseris" />
+            <div class="container">
+                <div class="header">
+                    <h3>Explore our work</h3>
+                    <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
                 </div>
-                <div class="arrows">
-                    <img src="/images/Double Arrow.png" class="carousel-backward" />
-                    <img src="/images/Double Arrow.png" class="carousel-forward" />
+                <div class="project-carousel">
+                    <div class="project-wrapper">
+                        <GithubCard Name="Citeblue" ProjectUrl="https://www.citeblue.com/" GithubUrl="https://github.com/sparc-coop/citeblue"/>
+                        <GithubCard Name="Sparc" ProjectUrl="https://www.sparc.coop/" GithubUrl="https://github.com/sparc-coop/sparc" />
+                        <GithubCard Name="Conseris" ProjectUrl="https://conseris.io/" GithubUrl="https://github.com/sparc-coop/conseris"/>
+                        <GithubCard Name="Citeblue" ProjectUrl="https://www.citeblue.com/" GithubUrl="https://github.com/sparc-coop/conseris" />
+                        <GithubCard Name="Sparc" ProjectUrl="https://www.sparc.coop/" GithubUrl="https://github.com/sparc-coop/sparc" />
+                        <GithubCard Name="Conseris" ProjectUrl="https://conseris.io/" GithubUrl="https://github.com/sparc-coop/conseris" />
+                    </div>
+                    <div class="arrows">
+                        <img src="/images/Double Arrow.png" class="carousel-backward" />
+                        <img src="/images/Double Arrow.png" class="carousel-forward" />
+                    </div>
                 </div>
             </div>
         </section>
         <section class="home--cta">
-            <div class="header">
-                <h3>Come and join us for the greatest marathon in the world</h3>
-            </div>
-            <div class="cta-input">
-                <input type="text" placeholder="you@email.com" />
-                <button class="sign-up"><img src="images/Arrow.png" /></button>
+            <div class="container">
+                <div class="header">
+                    <h3>Come and join us for the greatest marathon in the world</h3>
+                </div>
+                <div class="cta-input">
+                    <input type="text" placeholder="you@email.com" />
+                    <button class="sign-up"><img src="images/Arrow.png" /></button>
+                </div>
             </div>
         </section>
         <Footer />
