--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -20,6 +20,10 @@
         transform: translate(-50%, -50%);
         z-index: 0;
 
+        .container {
+            padding: 0 15px;
+        }
+
         .hero--image {
             width: 100%;
             margin-bottom: 35px;
@@ -38,6 +42,7 @@
             font-weight: 400;
 
             h1 {
+                margin: 0;
                 margin-bottom: 15px;
             }
 
@@ -48,22 +53,27 @@
                 line-height: 140%;
             }
         }
-
-        button.scroll-down {
-            transform: rotate(90);
-        }
     }
 
     .float-wrapper {
         width: 100%;
         position: relative;
-        top: 100vw;
+
+        .float-spacer {
+            width: 100vw;
+            height: 100vh;
+            background: transparent;
+        }
     }
 
     &--intro {
         width: 100%;
         padding-bottom: 312px;
         background: $background;
+
+        .container {
+            padding: 0 15px;
+        }
 
         .header {
             width: 1054px;
@@ -122,11 +132,15 @@
         width: 100%;
         height: 550px;
         background: $grey-200;
-        display: flex;
-        justify-content: center;
-        gap: 90px;
         color: $grey-900;
-        position: relative;
+
+        .container {
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            gap: 90px;
+            position: relative;
+        }
 
         .petals {
             width: 50%;
@@ -287,11 +301,14 @@
     &--cta {
         width: 100%;
         padding: 150px 80px;
-        display: flex;
-        justify-content: center;
-        gap: 40px;
-        flex-wrap: wrap;
         background: $background;
+
+        .container {
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+            flex-wrap: wrap;
+        }
 
         .header {
             max-width: 630px;
@@ -329,6 +346,291 @@
 
                 img {
                     width: 100%;
+                }
+            }
+        }
+    }
+
+    @media only screen and (max-width: 460px) {
+        section {
+            width: 100%;
+            padding: 80px 0;
+        }
+
+        &--hero {
+
+            .hero--image {
+                width: 100%;
+                margin-bottom: 15px;
+                text-align: center;
+
+                img {
+                    width: 80%;
+                }
+            }
+
+            .header {
+                max-width: 100%;
+            }
+        }
+
+        .float-wrapper {
+            width: 100%;
+            position: relative;
+        }
+
+        &--intro {
+            width: 100%;
+            padding-bottom: 312px;
+            background: $background;
+
+            .header {
+                width: 100%;
+                max-width: 370px;
+            }
+
+            .interactive-block {
+                max-width: 370px;
+                height: 200px;
+                margin-top: 40px;
+                border-radius: 25px;
+
+                img {
+                    max-width: 200px;
+                }
+            }
+
+            .projectlogo-carousel {
+                margin: 0 -15px;
+                margin-top: 80px;
+                margin-bottom: 30px;
+                display: flex;
+                justify-content: space-between;
+                gap: 35px;
+                overflow: hidden;
+
+                img {
+                    height: 25px;
+                }
+            }
+        }
+
+        section.home--about {
+            padding: 0px;
+        }
+
+        &--about {
+            width: 100%;
+            height: 550px;
+            background: $grey-200;
+            display: flex;
+            justify-content: center;
+            gap: 90px;
+            color: $grey-900;
+            position: relative;
+
+            .petals {
+                width: 50%;
+                position: relative;
+
+                img {
+                    width: 263px;
+                    position: absolute;
+                    top: 50%;
+                    left: 75%;
+                    transform: translate(-50%, -50%);
+                }
+            }
+
+            .about--wrapper {
+                width: 50%;
+                text-align: center;
+                overflow-y: auto;
+                overflow-x: hidden;
+
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+
+                h4 {
+                    text-decoration: underline;
+                }
+
+                .spacer {
+                    height: 0px;
+                }
+
+                & > div {
+                    width: 632px;
+                    margin-bottom: 40px;
+                    padding: 77px 55px;
+                }
+
+                div:first-child {
+                    padding-top: 120px;
+                }
+
+                div:nth-child(4) {
+                    margin-bottom: 0px;
+                    padding-bottom: 0px;
+                }
+
+                button.learn-more {
+                    padding: 8px 58px;
+                    border: solid 2px $grey-900;
+                    border-radius: 50px;
+                    font-family: 'NimbusSansExtd', sans-serif;
+                    font-size: 26px;
+                    background: transparent;
+                    color: $grey-900;
+                }
+
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+            }
+        }
+
+        &--projects {
+            width: 100%;
+            margin: 0 auto;
+            text-align: center;
+            background: $background;
+            position: relative;
+
+            .header {
+                margin-bottom: 60px;
+
+                h3, p {
+                    margin: 0
+                }
+
+                h3 {
+                    margin-bottom: 8px;
+                }
+            }
+
+            .project-carousel {
+                width: 100%;
+                padding: 20px 0;
+                position: relative;
+                overflow: hidden;
+
+                .project-wrapper {
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    gap: 24px;
+
+                    .github-card {
+                        width: 413px;
+                        height: 336px;
+                        padding-bottom: 9px;
+                        border: 1px solid $white;
+                        border-radius: 20px;
+
+                        a {
+                            text-decoration: none;
+
+                            &:hover {
+                                cursor: pointer;
+                            }
+                        }
+
+                        img.project-photo {
+                            width: 377px;
+                            margin: 18px;
+                            border-radius: 15px;
+                        }
+
+                        .github-wrapper {
+                            margin: 0 18px;
+                            display: flex;
+                            justify-content: space-between;
+                            vertical-align: middle;
+
+                            p.subtitle-1 {
+                                margin: auto 0;
+                                color: $white;
+                            }
+
+                            img.github-logo {
+                                width: 29px;
+                                height: 29px;
+                                margin: auto 0;
+                                color: $white;
+                            }
+                        }
+                    }
+                }
+
+                .arrows {
+                    width: 100%;
+                    height: 275px;
+                    display: flex;
+                    justify-content: space-between;
+                    position: absolute;
+                    top: 50px;
+                    z-index: 10;
+
+                    img {
+                        opacity: .75;
+                        /*backdrop-filter: blur(4px);*/
+                    }
+
+                    .carousel-forward {
+                        transform: rotate(180deg);
+                    }
+                }
+            }
+        }
+
+        &--cta {
+            width: 100%;
+            padding: 150px 80px;
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+            flex-wrap: wrap;
+            background: $background;
+
+            .header {
+                max-width: 630px;
+
+                h3 {
+                    font-size: 52px;
+                }
+            }
+
+            .cta-input {
+                margin: auto 0;
+                display: flex;
+                gap: 15px;
+
+                input {
+                    width: 560px;
+                    height: 55px;
+                    padding: 0 35px;
+                    border: 2px solid $grey-100;
+                    border-radius: 100px;
+                    background: transparent;
+                    color: $grey-200;
+                    font-family: 'NimbusSansExtd';
+                    font-weight: 400;
+                    font-size: 20px;
+                }
+
+                button.sign-up {
+                    width: 55px;
+                    height: 55px;
+                    padding: 0;
+                    margin: 0;
+                    background: transparent;
+                    border: none;
+
+                    img {
+                        width: 100%;
+                    }
                 }
             }
         }
