update GithubCard project photos

--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -252,6 +252,7 @@
 
                     img.project-photo {
                         width: 377px;
+                        height: 257.5px;
                         margin: 18px;
                         border-radius: 15px;
                     }
