--- a/Sparc.Blossom.Server/Shared/GithubCard.razor
+++ b/Sparc.Blossom.Server/Shared/GithubCard.razor
@@ -20,8 +20,7 @@
     public string GetPath(string? name)
     {
         string path;
-        //path = "/images/projects/Github_Project_" + name + ".png";
-        path = "/images/projects/landing/Project_Photo_" + name + ".png";
+        path = "/images/projects/landing/" + name + "_Landing.png";
         return path;
     }
 }
