update home--about section desktop

--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -40,26 +40,36 @@
         </section>
         <section class="home--about">
             <div class="container">
-                <div class="petals">
-                    <img src="/images/Pattern_2.png" />
-                </div>
-                <div class="about--wrapper">
-                    <div>
-                        <h4>Who we are</h4>
+                <div class="feature">
+                    <div class="image-wrapper">
+                        <img class="feature-image" src="/images/Frontend.png" />
+                    </div>
+                    <div class="content-wrapper">
+                        <h4>Frontend</h4>
                         <p class="subtitle-1">
                             Erat pellentesque adipiscing commodo elit. Facilisi nullam vehicula ipsum a. Sed nisi lacus sed viverra tellus in. 
                             Eget gravida cum sociis natoque penatibus. Imperdiet massa tincidunt nunc pulvinar sapien et ligula
                         </p>
                     </div>
-                    <div>
-                        <h4>What is Blossom</h4>
+                </div>
+                <div class="feature reverse">
+                    <div class="image-wrapper">
+                        <img class="feature-image" src="/images/Backend.png" />
+                    </div>
+                    <div class="content-wrapper">
+                        <h4>Backend</h4>
                         <p class="subtitle-1">
                             Non enim praesent elementum facilisis leo vel fringilla est ullamcorper.
                             Erat pellentesque adipiscing commodo elit. Facilisi nullam vehicula ipsum a.
                         </p>
                     </div>
-                    <div>
-                        <h4>How it works</h4>
+                </div>
+                <div class="feature">
+                    <div class="image-wrapper">
+                        <img class="feature-image" src="/images/Database.png" />
+                    </div>
+                    <div class="content-wrapper">
+                        <h4>Database</h4>
                         <p class="subtitle-1">
                             Phasellus egestas tellus rutrum tellus pellentesque. Imperdiet massa tincidunt nunc pulvinar.
                         </p>
@@ -67,16 +77,21 @@
                             Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Feugiat sed lectus vestibulum mattis ullamcorper....
                         </p>
                     </div>
-                    <div>
-                        <h4>Our goal</h4>
+                </div>
+                <div class="feature reverse">
+                    <div class="image-wrapper">
+                        <img class="feature-image" src="/images/Authentication.png" />
+                    </div>
+                    <div class="content-wrapper">
+                        <h4>Authentication</h4>
                         <p class="subtitle-1">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         </p>
                     </div>
-                    <div>
-                        <button class="learn-more">Learn More</button>
-                    </div>
+                </div>
+                <div class="button-wrapper">
+                    <button class="learn-more">Learn More</button>
                 </div>
             </div>
         </section>
