--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -125,68 +125,68 @@
     }
 
     section.home--about {
-        padding: 0px;
+        padding: 120px 0;
     }
 
     &--about {
         width: 100%;
-        height: 550px;
+        height: 100%;
+        border: none;
+        border-radius: 50px;
         background: $grey-200;
         color: $grey-900;
 
         .container {
             height: 100%;
+            padding: 0 80px;
+        }
+
+        .feature {
+            width: 100%;
+            height: 501px;
+            margin: 120px 0;
             display: flex;
+            flex-direction: row;
             justify-content: center;
-            gap: 90px;
-            position: relative;
-        }
+            gap: 144px;
 
-        .petals {
-            width: 50%;
-            position: relative;
+            .image-wrapper {
+                margin: auto 0;
 
-            img {
-                width: 263px;
-                position: absolute;
-                top: 50%;
-                left: 75%;
-                transform: translate(-50%, -50%);
+                img.feature-image {
+                    width: 347px;
+                    height: 347px;
+                }
+            }
+
+            .content-wrapper {
+                width: 520px;
+                margin: auto 0;
+                padding: 77px 0;
+                text-align: center;
+
+                h4 {
+                    text-decoration: underline;
+                }
+            }
+
+            &.reverse {
+                flex-direction: row-reverse;
             }
         }
 
-        .about--wrapper {
-            width: 50%;
+        div:first-child {
+            margin-top: 0;
+        }
+
+        div:nth-child(4) {
+            margin-bottom: 0;
+        }
+
+        .button-wrapper {
+            width: 100%;
+            padding-top: 60px;
             text-align: center;
-            overflow-y: auto;
-            overflow-x: hidden;
-
-            &::-webkit-scrollbar {
-                display: none;
-            }
-
-            h4 {
-                text-decoration: underline;
-            }
-
-            .spacer {
-                height: 0px;
-            }
-
-            & > div {
-                width: 632px;
-                margin-bottom: 40px;
-                padding: 77px 55px;
-            }
-
-            div:first-child {
-                padding-top: 120px;
-            }
-
-            div:nth-child(4) {
-                margin-bottom: 0px;
-                padding-bottom: 0px;
-            }
 
             button.learn-more {
                 padding: 8px 58px;
@@ -196,10 +196,6 @@
                 font-size: 26px;
                 background: transparent;
                 color: $grey-900;
-            }
-
-            &::-webkit-scrollbar {
-                display: none;
             }
         }
     }
