--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -307,60 +307,60 @@ footer .footer--column .column-links a {
   height: 55px;
 }
 .home section.home--about {
-  padding: 0px;
+  padding: 120px 0;
 }
 .home--about {
   width: 100%;
-  height: 550px;
+  height: 100%;
+  border: none;
+  border-radius: 50px;
   background: #D0CECD;
   color: #140903;
 }
 .home--about .container {
   height: 100%;
+  padding: 0 80px;
+}
+.home--about .feature {
+  width: 100%;
+  height: 501px;
+  margin: 120px 0;
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  gap: 90px;
-  position: relative;
+  gap: 144px;
 }
-.home--about .petals {
-  width: 50%;
-  position: relative;
+.home--about .feature .image-wrapper {
+  margin: auto 0;
 }
-.home--about .petals img {
-  width: 263px;
-  position: absolute;
-  top: 50%;
-  left: 75%;
-  transform: translate(-50%, -50%);
+.home--about .feature .image-wrapper img.feature-image {
+  width: 347px;
+  height: 347px;
 }
-.home--about .about--wrapper {
-  width: 50%;
+.home--about .feature .content-wrapper {
+  width: 520px;
+  margin: auto 0;
+  padding: 77px 0;
   text-align: center;
-  overflow-y: auto;
-  overflow-x: hidden;
 }
-.home--about .about--wrapper::-webkit-scrollbar {
-  display: none;
-}
-.home--about .about--wrapper h4 {
+.home--about .feature .content-wrapper h4 {
   text-decoration: underline;
 }
-.home--about .about--wrapper .spacer {
-  height: 0px;
+.home--about .feature.reverse {
+  flex-direction: row-reverse;
 }
-.home--about .about--wrapper > div {
-  width: 632px;
-  margin-bottom: 40px;
-  padding: 77px 55px;
+.home--about div:first-child {
+  margin-top: 0;
 }
-.home--about .about--wrapper div:first-child {
-  padding-top: 120px;
+.home--about div:nth-child(4) {
+  margin-bottom: 0;
 }
-.home--about .about--wrapper div:nth-child(4) {
-  margin-bottom: 0px;
-  padding-bottom: 0px;
+.home--about .button-wrapper {
+  width: 100%;
+  padding-top: 60px;
+  text-align: center;
 }
-.home--about .about--wrapper button.learn-more {
+.home--about .button-wrapper button.learn-more {
   padding: 8px 58px;
   border: solid 2px #140903;
   border-radius: 50px;
@@ -368,9 +368,6 @@ footer .footer--column .column-links a {
   font-size: 26px;
   background: transparent;
   color: #140903;
-}
-.home--about .about--wrapper::-webkit-scrollbar {
-  display: none;
 }
 .home--projects {
   width: 100%;
