progress for guide page

--- a/Sparc.Blossom.Server/App.scss
+++ b/Sparc.Blossom.Server/App.scss
@@ -26,7 +26,7 @@ button {
     cursor: pointer;
 }
 
-.ibis-translate {
+/*.ibis-translate {
     padding: 0;
     margin: 0;
 }
@@ -34,4 +34,4 @@ button {
 .ibis-translating {
     visibility: visible;
     opacity: 0.3;
-}
+}*/
