--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -477,18 +477,51 @@ footer .footer--column .column-links a {
 .guide--hero .ask-questions button img {
   width: 100%;
 }
-.guide--categories .category {
+.guide .category {
   margin-bottom: 102px;
 }
-.guide--categories .category .subtitle-1 {
+.guide .category .subtitle-1 {
   font-family: "NimbusSans", sans-serif;
   color: #A19D9A;
 }
-.guide--categories .category h2 {
-  margin-bottom: 31px;
-  font-family: "NimbusSansExtd", sans-serif;
+.guide .category .guide--heading {
+  display: flex;
 }
-
+.guide .category img {
+  display: inline;
+  vertical-align: middle;
+  margin: 10px 30px 0 0;
+  align-self: self-start;
+}
+.guide .category h2 {
+  margin: 0;
+  font-family: "NimbusSansExtd", sans-serif;
+  cursor: pointer;
+  display: inline;
+}
+.guide--wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.guide--wrapper img {
+  width: 87px;
+  align-self: self-start;
+  cursor: pointer;
+  margin-top: 20%;
+}
+.guide--content {
+  width: 100%;
+  margin: 0 auto;
+  background-color: #D0CECD;
+  border-radius: 20px;
+  padding: 60px;
+  box-sizing: border-box;
+  color: #000000;
+  display: none;
+}
+.guide--content.show-section {
+  display: block;
+}
 body {
   margin: 0;
   background: #020201;
@@ -501,12 +534,12 @@ button {
   cursor: pointer;
 }
 
-.ibis-translate {
-  padding: 0;
-  margin: 0;
+/*.ibis-translate {
+    padding: 0;
+    margin: 0;
 }
 
 .ibis-translating {
-  visibility: visible;
-  opacity: 0.3;
-}
+    visibility: visible;
+    opacity: 0.3;
+}*/
