ui refactoring for project carousel

--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -91,7 +91,9 @@
                     </div>
                 </div>
                 <div class="button-wrapper">
-                    <button class="learn-more">Learn More</button>
+                    <a href="https://github.com/sparc-coop/blossom" target="_blank" class="learn-more">
+                        Learn More
+                    </a>
                 </div>
             </div>
         </section>
@@ -110,10 +112,12 @@
                         <GithubCard Name="Sparc" ProjectUrl="https://www.sparc.coop/" GithubUrl="https://github.com/sparc-coop/sparc" />
                         <GithubCard Name="Conseris" ProjectUrl="https://conseris.io/" GithubUrl="https://github.com/sparc-coop/conseris" />
                     </div>
-                    <div class="arrows">
-                        <img src="/images/Double Arrow.png" class="carousel-backward" />
-                        <img src="/images/Double Arrow.png" class="carousel-forward" />
+                    <div class="arrows-container carousel-backward">
+                        <img src="/images/Double Arrow.png" />
                     </div>
+                    <div class="arrows-container carousel-forward">
+                        <img src="/images/Double Arrow.png" />
+                    </div>                  
                 </div>
             </div>
         </section>
