--- a/Sparc.Blossom.Server/Shared/Footer.razor
+++ b/Sparc.Blossom.Server/Shared/Footer.razor
@@ -2,34 +2,34 @@
     <div class="footer--column">
         <p class="title-2">Project</p>
         <div class="column-links">
-            <a href="">Citeblue</a>
-            <a href="">Kodekit</a>
-            <a href="">Conseris</a>
-            <a href="">Law of 100</a>
-            <a href="">Ibis</a>
+            <a href="https://www.citeblue.com/">Citeblue</a>
+            <a href="https://www.kodekit.io/">Kodekit</a>
+            <a href="https://conseris.io/">Conseris</a>
+            <a href="https://lawof100.co/">Law of 100</a>
+            <a href="https://ibis.chat/">Ibis</a>
         </div>
     </div>
     <div class="footer--column">
         <p class="title-2">Resources</p>
         <div class="column-links">
-            <a href="">Sparc</a>
-            <a href="">Kuvio</a>
+            <a href="https://www.sparc.coop/">Sparc</a>
+            <a href="https://kuv.io/">Kuvio</a>
         </div>
     </div>
     <div class="footer--column">
         <p class="title-2">Social</p>
         <div class="column-links">
-            <a href="">Instagram</a>
-            <a href="">Twitter</a>
-            <a href="">GitHub</a>
+@*            <a href="">Instagram</a>
+            <a href="">Twitter</a>*@
+            <a href="https://github.com/sparc-coop/blossom">GitHub</a>
         </div>
     </div>
-    <div class="footer--column">
+@*    <div class="footer--column">
         <p class="title-2">Legal</p>
         <div class="column-links">
             <a href="">Privacy</a>
             <a href="">Terms & Conditions</a>
             <a href="">We use cookies</a>
         </div>
-    </div>
+    </div>*@
 </footer>
