--- a/Sparc.Blossom.Server/Shared/GithubCard.razor
+++ b/Sparc.Blossom.Server/Shared/GithubCard.razor
@@ -1,16 +1,12 @@
-﻿<div class="github-card">
-    <a href="@ProjectUrl" target="_blank">
-        <img class="project-photo" src="@GetPath(Name)" />
-    </a>
+﻿<a href="@ProjectUrl" target="_blank" class="github-card">
+    <img class="project-photo" src="@GetPath(Name)" />
     <div class="github-wrapper">
-        <a href="@ProjectUrl" target="_blank">
-            <p class="subtitle-1">@Name</p>
-        </a>
-        <a href="@GithubUrl" target="_blank">
+        <p class="subtitle-1">@Name</p>
+        <a @onclick:stopPropagation="true" href="@GithubUrl" target="_blank">
             <img class="github-logo" src="/images/Github.png" />
         </a>
     </div>
-</div>
+</a>
 
 @code {
     [Parameter] public string? Name { get; set; }
