--- a/Sparc.Blossom.Server/Shared/NavMenu.scss
+++ b/Sparc.Blossom.Server/Shared/NavMenu.scss
@@ -19,7 +19,7 @@ nav {
             width: 142px;
         }
     }
-
+    
     .links-wrapper {
         display: flex;
         margin: auto 0;
@@ -35,15 +35,16 @@ nav {
             }
         }
 
-        button.explore-blossom {
+        .explore-blossom {
             margin-right: 50px;
-            padding: 0 25px;
+            padding: 6px 25px;
             border: solid 2px $grey-100;
             border-radius: 50px;
             font-family: 'NimbusSansExtd', sans-serif;
             background: transparent;
             color: $grey-100;
             font-size: 16px;
+            text-decoration: none;
         }
     }
 
