--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -305,10 +305,11 @@
 
     &--cta {
         width: 100%;
-        padding: 150px 80px;
+        padding: 150px 0;
         background: $background;
 
         .container {
+            padding: 0 80px;
             display: flex;
             justify-content: center;
             gap: 40px;
@@ -394,6 +395,7 @@
             }
 
             .interactive-block {
+                width: 100%;
                 max-width: 370px;
                 height: 200px;
                 margin-top: 40px;
@@ -455,6 +457,7 @@
                 }
 
                 .content-wrapper {
+                    width: 100%;
                     margin: 0 auto;
                     padding: 0;
                 }
@@ -508,7 +511,7 @@
                         .github-wrapper {
                             margin: 0 10px;
 
-                           img.github-logo {
+                            img.github-logo {
                                 width: 20px;
                                 height: 20px;
                             }
@@ -528,52 +531,42 @@
             }
         }
 
+        section.home--cta {
+            padding: 0;
+            padding-top: 60px;
+        }
+
         &--cta {
-            width: 100%;
-            padding: 150px 80px;
-            display: flex;
-            justify-content: center;
-            gap: 40px;
-            flex-wrap: wrap;
-            background: $background;
+            .container {
+                padding: 0 20px;
+                flex-direction: column;
+                justify-content: space-between;
+                gap: 0;
+                flex-wrap: nowrap;
+            }
 
             .header {
-                max-width: 630px;
+                width: 100%;
 
                 h3 {
-                    font-size: 52px;
+                    font-size: 28px;
                 }
             }
 
             .cta-input {
                 margin: auto 0;
-                display: flex;
                 gap: 15px;
 
                 input {
-                    width: 560px;
-                    height: 55px;
-                    padding: 0 35px;
-                    border: 2px solid $grey-100;
-                    border-radius: 100px;
-                    background: transparent;
-                    color: $grey-200;
-                    font-family: 'NimbusSansExtd';
-                    font-weight: 400;
-                    font-size: 20px;
+                    width: 100%;
+                    height: 30px;
+                    padding: 0 25px;
+                    font-size: 16px;
                 }
 
                 button.sign-up {
-                    width: 55px;
-                    height: 55px;
-                    padding: 0;
-                    margin: 0;
-                    background: transparent;
-                    border: none;
-
-                    img {
-                        width: 100%;
-                    }
+                    width: 36px;
+                    height: 36px;
                 }
             }
         }
