--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -460,10 +460,11 @@ footer .footer--column .column-links a {
 }
 .home--cta {
   width: 100%;
-  padding: 150px 80px;
+  padding: 150px 0;
   background: #020201;
 }
 .home--cta .container {
+  padding: 0 80px;
   display: flex;
   justify-content: center;
   gap: 40px;
@@ -533,6 +534,7 @@ footer .footer--column .column-links a {
     max-width: 370px;
   }
   .home--intro .interactive-block {
+    width: 100%;
     max-width: 370px;
     height: 200px;
     margin-top: 40px;
@@ -585,6 +587,7 @@ footer .footer--column .column-links a {
     height: 200px;
   }
   .home--about .feature .content-wrapper {
+    width: 100%;
     margin: 0 auto;
     padding: 0;
   }
@@ -636,48 +639,36 @@ footer .footer--column .column-links a {
   .home--projects .project-carousel .arrows-container img {
     height: 150px;
   }
-  .home--cta {
-    width: 100%;
-    padding: 150px 80px;
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-    flex-wrap: wrap;
-    background: #020201;
+  .home section.home--cta {
+    padding: 0;
+    padding-top: 60px;
+  }
+  .home--cta .container {
+    padding: 0 20px;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 0;
+    flex-wrap: nowrap;
   }
   .home--cta .header {
-    max-width: 630px;
+    width: 100%;
   }
   .home--cta .header h3 {
-    font-size: 52px;
+    font-size: 28px;
   }
   .home--cta .cta-input {
     margin: auto 0;
-    display: flex;
     gap: 15px;
   }
   .home--cta .cta-input input {
-    width: 560px;
-    height: 55px;
-    padding: 0 35px;
-    border: 2px solid #F6F4F3;
-    border-radius: 100px;
-    background: transparent;
-    color: #D0CECD;
-    font-family: "NimbusSansExtd";
-    font-weight: 400;
-    font-size: 20px;
+    width: 100%;
+    height: 30px;
+    padding: 0 25px;
+    font-size: 16px;
   }
   .home--cta .cta-input button.sign-up {
-    width: 55px;
-    height: 55px;
-    padding: 0;
-    margin: 0;
-    background: transparent;
-    border: none;
-  }
-  .home--cta .cta-input button.sign-up img {
-    width: 100%;
+    width: 36px;
+    height: 36px;
   }
 }
 
