carousel testing options

--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -24,20 +24,19 @@
                     <h3>Blossom breaks many paradigms</h3>
                     <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
                 </div>
-                <div class="interactive-block">
+@*                <div class="interactive-block">
                     <img src="images/Blocks.png" />
-                </div>
-                <div class="projectlogo-carousel">
-                    <img src="/images//projects/logos/Citeblue_Hori.png"/>
-                    <img src="/images//projects/logos/Law of 100_Hori.png"/>
-                    <img src="/images//projects/logos/Kuvio_Hori.png" />
-                    <img src="/images//projects/logos/Sparc_Hori.png" />
-                    <img src="/images//projects/logos/Kodekit_Hori.png" />
-                    <img src="/images//projects/logos/Ibis_Hori.png" />
-                    <img src="/images//projects/logos/Conseris_Hori.png" />
-                </div>
+                </div>*@
             </div>
         </section>
+        <div class="projectlogo-carousel">
+            <img src="/images/projects/logos/Citeblue_Hori.png" />
+            <img src="/images/projects/logos/Law of 100_Hori.png" />
+            <img src="/images/projects/logos/Sparc_Hori.png" />
+            <img src="/images/projects/logos/Kodekit_Hori.png" />
+            <img src="/images/projects/logos/Ibis_Hori.png" />
+            <img src="/images/projects/logos/Conseris_Hori.png" />
+        </div>
         <section class="home--about">
             <div class="container">
                 <div class="feature">
