--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -108,19 +108,22 @@
                 transform: translate(-50%, 0);
             }
         }
+    }
 
-        .projectlogo-carousel {
-            width: 100%;
-            margin-top: 107px;
-            margin-bottom: 100px;
-            display: flex;
-            justify-content: space-between;
-            gap: 69px;
-            overflow: hidden;
+    .projectlogo-carousel {
+        width: 100%;
+        padding: 0 0 100px 0;
+        display: flex;
+        background: $black;
 
-            img {
-                height: 55px;
-            }
+        .mud-carousel {
+            height: 50px;
+        }
+
+        img {
+            width: auto;
+            height: 44px;
+            margin: 0 20px;
         }
     }
 
@@ -281,8 +284,6 @@
                 border-bottom-right-radius: 125px;
                 width: 126px;
                 height: 306px;
-                /*                display: flex;
-                justify-content: space-between;*/
                 position: absolute;
                 top: 50px;
                 z-index: 10;
